tests/cases/match/errors/match-duplicate-arm.ari
enum Choice {
  A,
  B,
}

fn main() -> i64 {
  let value = A;
  match value {
    A => {
      return 1;
    }
    A => {
      return 2;
    }
    B => {
      return 3;
    }
  }
}
